--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -14,11 +14,12 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="/static/styles.css">
 
     <title>{% block title %}Home{% endblock %}</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
       <button
         class="navbar-toggler"
         type="button"
@@ -33,8 +34,8 @@
           <a class="nav-item nav-link" id="home" href="/">Home</a>
           <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
           {% else %}
-          <a class="nav-item nav-link" id="login" href="/login">Login</a>
-          <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a>
+          <a class="nav-item nav-link" id="login" href="/login">FitBit Credentials Participant Submit Form</a>
+          <!-- <a class="nav-item nav-link" id="signUp" href="/sign-up">Sign Up</a> -->
           {% endif %}
         </div>
       </div>
