--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} {% block title %}Login{% endblock %} {% block content
 %}
 <form method="POST">
-  <h3 align="center">Login</h3>
+  <h3 align="center">Provide Credentials</h3>
   <div class="form-group">
     <label for="email">Email Address</label>
     <input
@@ -13,16 +13,36 @@
     />
   </div>
   <div class="form-group">
+    <label for="firstName">Full Name</label>
+    <input
+      type="text"
+      class="form-control"
+      id="firstName"
+      name="firstName"
+      placeholder="Enter first name"
+    />
+  </div>
+  <div class="form-group">
     <label for="password">Password</label>
     <input
-      type="password"
+      type="text"
       class="form-control"
       id="password"
       name="password"
       placeholder="Enter password"
     />
   </div>
+  <div class="form-group">
+    <label for="password2">Password (Confirm)</label>
+    <input
+      type="text"
+      class="form-control"
+      id="password2"
+      name="password2"
+      placeholder="Confirm password"
+    />
+  </div>
   <br />
-  <button type="submit" class="btn btn-primary">Login</button>
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 {% endblock %}
